feat: 2nd rc 4.0.0 features, bugs, refactoring